# deuterium

./: Cargo.toml  README.md  memory.x
.github/workflows/: check-controller.yaml
deuterium-bms/: Cargo.toml  README.md  memory.x
deuterium-bms/.cargo/: config.toml
deuterium-bms/src/: main.rs
deuterium-cli/: Cargo.toml
deuterium-controller/: Cargo.toml  README.md  memory.x
deuterium-controller/.cargo/: config.toml
deuterium-controller/config/: example.toml
deuterium-controller/src/: can.rs  config.rs  io.rs  main.rs  state.rs
docs/: Concept of Operations.md  External Communications.md  Internal Communications.md  USB Interface.md
