[package]
name = "deuterium-bms"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = "0.3.1"
rtic = { version = "2.0.1", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "1.3.0", features = ["cortex-m-systick"] }

[dependencies.pac25-hal]
git = "https://github.com/pac-rs/pac25-hal.git"
features = ["pac25140"]

[[bin]]
name = "deuterium-bms"
bench = false
