[package]
name = "deuterium-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
bxcan = { version = "0.6.0", features = ["defmt"] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.1", features = ["defmt"] }
rtic = { version = "2.0.1", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "1.3.0", features = ["cortex-m-systick"] }
stm32l4xx-hal = { version = "0.7.1", features = ["stm32l451", "rt"] }

[[bin]]
name = "deuterium-controller"
bench = false
